[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/viep.png" type="Texture" id=1]
[ext_resource path="res://assets/Flaux/FlauxKO1.png" type="Texture" id=2]
[ext_resource path="res://assets/Flaux/FlauxBlessee0_1.png" type="Texture" id=3]
[ext_resource path="res://assets/Flaux/FlauxBlessee1_0.png" type="Texture" id=4]
[ext_resource path="res://assets/Flaux/FlauxInquiete1.png" type="Texture" id=5]
[ext_resource path="res://assets/Flaux/FlauxBlessee2_1.png" type="Texture" id=6]
[ext_resource path="res://assets/Flaux/FlauxKO2.png" type="Texture" id=7]
[ext_resource path="res://assets/Flaux/FlauxBlessee1_1.png" type="Texture" id=8]
[ext_resource path="res://assets/Flaux/FlauxEnervee2.png" type="Texture" id=9]
[ext_resource path="res://assets/Flaux/FlauxNeutre0.png" type="Texture" id=10]
[ext_resource path="res://assets/Flaux/FlauxBlessee2_0.png" type="Texture" id=11]
[ext_resource path="res://assets/Flaux/FlauxEnervee0.png" type="Texture" id=12]
[ext_resource path="res://assets/Flaux/FlauxNeutre1.png" type="Texture" id=13]
[ext_resource path="res://assets/Flaux/FlauxFatiguee2.png" type="Texture" id=14]
[ext_resource path="res://assets/Flaux/FlauxFatiguee0.png" type="Texture" id=15]
[ext_resource path="res://assets/Flaux/FlauxInquiete2.png" type="Texture" id=16]
[ext_resource path="res://assets/Flaux/FlauxInquiete0.png" type="Texture" id=17]
[ext_resource path="res://assets/Flaux/FlauxNeutre2.png" type="Texture" id=18]
[ext_resource path="res://assets/Flaux/FlauxFatiguee1.png" type="Texture" id=19]
[ext_resource path="res://assets/Flaux/FlauxBlessee0_0.png" type="Texture" id=20]
[ext_resource path="res://assets/Flaux/FlauxKO0.png" type="Texture" id=21]
[ext_resource path="res://assets/Flaux/FlauxEnervee1.png" type="Texture" id=22]
[ext_resource path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://assets/MenuFlaux.png" type="Texture" id=24]
[ext_resource path="res://assets/vievr.png" type="Texture" id=25]
[ext_resource path="res://Scenes/PersoFlaux.gd" type="Script" id=26]
[ext_resource path="res://Montreal.tres" type="DynamicFont" id=27]
[ext_resource path="res://assets/Flaux/FlauxContente0.png" type="Texture" id=28]
[ext_resource path="res://assets/Flaux/FlauxContente2.png" type="Texture" id=29]
[ext_resource path="res://assets/Flaux/FlauxTriste2.png" type="Texture" id=30]
[ext_resource path="res://assets/Flaux/FlauxTriste1.png" type="Texture" id=31]
[ext_resource path="res://assets/Flaux/FlauxContente1.png" type="Texture" id=32]
[ext_resource path="res://assets/Flaux/FlauxTriste0.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 32 ), ExtResource( 29 ) ],
"loop": true,
"name": "Content",
"speed": 3.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 5 ), ExtResource( 16 ) ],
"loop": true,
"name": "Inquiet",
"speed": 3.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "KO",
"speed": 3.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 6 ) ],
"loop": false,
"name": "Blesse",
"speed": 6.0
}, {
"frames": [ null, null, null ],
"loop": true,
"name": "Prisonnier",
"speed": 3.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 31 ), ExtResource( 30 ) ],
"loop": true,
"name": "Triste",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "Neutre",
"speed": 3.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 19 ), ExtResource( 14 ) ],
"loop": true,
"name": "Fatigue",
"speed": 3.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 22 ), ExtResource( 9 ) ],
"loop": true,
"name": "Enerve",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 23 )

[node name="PersoFlaux" type="HBoxContainer"]
margin_right = 613.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="MarginContainer" parent="."]
margin_right = 250.0
margin_bottom = 280.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Portrait"]
margin_left = 5.0
margin_right = 245.0
margin_bottom = 280.0

[node name="Cadre" type="Panel" parent="Portrait/VBoxContainer"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )

[node name="Sprite" type="AnimatedSprite" parent="Portrait/VBoxContainer/Cadre"]
position = Vector2( 120, 120 )
frames = SubResource( 1 )
animation = "Neutre"
frame = 2
playing = true

[node name="LifeBar" type="TextureProgress" parent="Portrait/VBoxContainer"]
margin_top = 244.0
margin_right = 240.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 36 )
max_value = 177.0
value = 177.0
texture_under = ExtResource( 25 )
texture_progress = ExtResource( 1 )

[node name="CadreMenu" type="MarginContainer" parent="."]
margin_left = 254.0
margin_right = 613.0
margin_bottom = 280.0
size_flags_horizontal = 3
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="CadreMenu"]
margin_left = 5.0
margin_right = 359.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 24 )

[node name="Menu" type="MarginContainer" parent="CadreMenu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CadreMenu/Background/Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 354.0
margin_bottom = 275.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CadreMenu/Background/Menu/VBoxContainer"]
margin_right = 349.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( -366, -146 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 2

[node name="Skill1" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons", "FlauxButtons"]]
margin_right = 172.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../Skill2")
focus_neighbour_top = NodePath("../Skill3")
focus_neighbour_right = NodePath("../Skill2")
focus_neighbour_bottom = NodePath("../Skill3")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 1, 0.329412, 0.207843, 1 )
custom_fonts/font = SubResource( 2 )
button_mask = 0
text = "Skill1"

[node name="Skill2" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons", "FlauxButtons"]]
margin_left = 176.0
margin_right = 348.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../Skill1")
focus_neighbour_top = NodePath("../Skill5")
focus_neighbour_right = NodePath("../Skill1")
focus_neighbour_bottom = NodePath("../Skill4")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 1, 0.329412, 0.207843, 1 )
custom_fonts/font = SubResource( 3 )
button_mask = 0
text = "Skill2"

[node name="Skill3" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons", "FlauxButtons"]]
margin_top = 52.0
margin_right = 172.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../Skill4")
focus_neighbour_top = NodePath("../Skill1")
focus_neighbour_right = NodePath("../Skill4")
focus_neighbour_bottom = NodePath("../Skill1")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 1, 0.329412, 0.207843, 1 )
custom_fonts/font = SubResource( 4 )
button_mask = 0
text = "Skill3"

[node name="Skill4" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons", "FlauxButtons"]]
margin_left = 176.0
margin_top = 52.0
margin_right = 348.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../Skill3")
focus_neighbour_top = NodePath("../Skill2")
focus_neighbour_right = NodePath("../Skill3")
focus_neighbour_bottom = NodePath("../Skill5")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 1, 0.329412, 0.207843, 1 )
custom_fonts/font = SubResource( 5 )
button_mask = 0
text = "Skill4"

[node name="PV" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer"]
margin_top = 117.0
margin_right = 172.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 7 )
text = "PV : 177 / 177"
align = 1

[node name="Skill5" type="Button" parent="CadreMenu/Background/Menu/VBoxContainer/GridContainer" groups=["CharaButtons", "FlauxButtons"]]
margin_left = 176.0
margin_top = 104.0
margin_right = 348.0
margin_bottom = 152.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Skill4")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Skill2")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 1, 0.329412, 0.207843, 1 )
custom_fonts/font = SubResource( 6 )
button_mask = 0
text = "Skill5"

[node name="Separation" type="ColorRect" parent="CadreMenu/Background/Menu/VBoxContainer"]
margin_top = 158.0
margin_right = 349.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="MarginContainer" type="MarginContainer" parent="CadreMenu/Background/Menu/VBoxContainer"]
margin_top = 168.0
margin_right = 349.0
margin_bottom = 270.0
rect_min_size = Vector2( 349, 65 )
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Description" type="Label" parent="CadreMenu/Background/Menu/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 344.0
margin_bottom = 97.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 27 )
text = "Flaux, chasseuse de trésors qui elle, savait ce qu'elle faisait. Confiante, blageuse, rapide, et inflige beaucoup de dégâts."
autowrap = true
clip_text = true

[connection signal="pressed" from="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill1" to="." method="_on_Skill1_pressed"]
[connection signal="pressed" from="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill2" to="." method="_on_Skill2_pressed"]
[connection signal="pressed" from="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill3" to="." method="_on_Skill3_pressed"]
[connection signal="pressed" from="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill4" to="." method="_on_Skill4_pressed"]
[connection signal="pressed" from="CadreMenu/Background/Menu/VBoxContainer/GridContainer/Skill5" to="." method="_on_Skill5_pressed"]
